--- a/ubuntu/Vagrantfile
+++ b/ubuntu/Vagrantfile
@@ -5,7 +5,7 @@
 Vagrant.configure("2") do |config|
 
   config.vm.define "ubuntu" do |ubuntu|
-    ubuntu.vm.box = "ubuntu/bionic64"
+    ubuntu.vm.box = "ubuntu/xenial64"
     ubuntu.vm.hostname = "ubuntu.example.com"
     ubuntu.vm.network "private_network", ip: "172.20.0.1"
     ubuntu.vm.provider "virtualbox" do |v|
