added git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ terraform_tfstate*
 .terraform*
 *LaunchKey*
 tfplan
+keys/
 .terraform/
 terraform-provider-aws_v2.18.0_x4*
 terraform-provider-template_v2.1.2_x4
