--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@ terraform_tfstate*
 .terraform*
 *LaunchKey*
 tfplan
-keys/
+*.state
+/swarm/keys/
 .terraform/
 terraform-provider-aws_v2.18.0_x4*
 terraform-provider-template_v2.1.2_x4
