--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -15,22 +15,16 @@ jobs:
 
     # Update
     - name: update intermediatory container
-      run: apt-get update -y
+      run: |
+         apt-get update -y
+         apt-get install wget unzip -y
+         rm -rf /var/lib/apt/lists/*
+         wget --quiet https://releases.hashicorp.com/terraform/0.12.7/terraform_0.12.7_linux_amd64.zip
+         unzip terraform_0.12.7_linux_amd64.zip
+         mv terraform /usr/bin \
+         rm terraform_0.12.7_linux_amd64.zip
+         terraform --version
+         
+         
     
-    # Dependency Packages
-    - name: Install dependency packages
-      run: apt-get install wget unzip -y
-    
-    - name: remove cache 
-      run: rm -rf /var/lib/apt/lists/*
-    
-    - name: install terraform
-      run: | 
-        wget --quiet https://releases.hashicorp.com/terraform/0.12.7/terraform_0.12.7_linux_amd64.zip
-        unzip terraform_0.12.7_linux_amd64.zip
-        mv terraform /usr/bin \
-        rm terraform_0.12.7_linux_amd64.zip
-        
-    - name: validate terraform installation
-      run: terraform --version
       
