--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -15,11 +15,12 @@ jobs:
 
     # Update
     - name: update intermediatory container
+      working-directory: /tmp
       run: |
-         sudo wget --quiet https://releases.hashicorp.com/terraform/0.12.7/terraform_0.12.7_linux_amd64.zip -O /tmp/terraform_0.12.7_linux_amd64.zip
-         sudo unzip /tmp/terraform_0.12.7_linux_amd64.zip
-         sudo mv /tmp/terraform /usr/bin \
-         sudo rm /tmp/terraform_0.12.7_linux_amd64.zip
+         sudo wget --quiet https://releases.hashicorp.com/terraform/0.12.7/terraform_0.12.7_linux_amd64.zip 
+         sudo unzip terraform_0.12.7_linux_amd64.zip
+         sudo mv terraform /usr/bin 
+         sudo rm terraform_0.12.7_linux_amd64.zip
          terraform --version
          
          
