--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v1
 
     # Update
-    - name: update intermediatory container
+    - name: Install terraform
       working-directory: /tmp
       run: |
          sudo wget --quiet https://releases.hashicorp.com/terraform/0.12.7/terraform_0.12.7_linux_amd64.zip 
@@ -22,6 +22,18 @@ jobs:
          sudo mv terraform /usr/bin 
          sudo rm terraform_0.12.7_linux_amd64.zip
          terraform --version
+         
+    - name: terraform initialization
+      working-directory: /opt
+      env:
+        AWS_ACCESS_KEY_ID: ${{secrets.access_key}}
+        AWS_SECRET_ACCESS_KEY: ${{secrets.secret_key}}
+      run: |
+        git clone https://github.com/PrasadTelasula/LearnDocker.git
+        ls -la /opt/LearnDocker
+      
+        
+         
          
          
     
