--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -16,28 +16,7 @@ jobs:
     # Update
     - name: Install terraform
       working-directory: /tmp
-      run: |
-         sudo wget --quiet https://releases.hashicorp.com/terraform/0.12.12/terraform_0.12.12_linux_amd64.zip 
-         sudo unzip terraform_0.12.12_linux_amd64.zip
-         sudo mv terraform /usr/bin 
-         sudo rm terraform_0.12.12_linux_amd64.zip
-         terraform --version
-         
-    - name: Clone repository
-      working-directory: /opt
-      env:
-        AWS_ACCESS_KEY_ID: ${{secrets.access_key}}
-        AWS_SECRET_ACCESS_KEY: ${{secrets.secret_key}}
-      run: |
-        git clone https://github.com/PrasadTelasula/LearnDocker.git
-        ls -la /opt/LearnDocker
-        
-    - name: Terraform Initialize
-      working-directory: /opt/LearnDocker/swarm/
-      env:
-        AWS_ACCESS_KEY_ID: ${{secrets.access_key}}
-        AWS_SECRET_ACCESS_KEY: ${{secrets.secret_key}}
-      run: terraform init
+      run: terraform --version
       
         
          
