--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -16,7 +16,9 @@ jobs:
     # Update
     - name: Install terraform
       working-directory: /tmp
-      run: terraform --version
+      run: |
+         terraform --version
+         whereis terraform
       
         
          
