--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -19,6 +19,8 @@ jobs:
       run: |
          terraform --version
          whereis terraform
+         terraform 0.12upgrade
+         terraform --version
       
         
          
