--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -19,7 +19,11 @@ jobs:
       run: |
          terraform --version
          whereis terraform
-         terraform 0.12upgrade
+         rm -rf /usr/local/bin/terraform
+         sudo wget --quiet https://releases.hashicorp.com/terraform/0.12.12/terraform_0.12.12_linux_amd64.zip 
+         sudo unzip terraform_0.12.12_linux_amd64.zip
+         sudo mv terraform /usr/bin 
+         sudo rm terraform_0.12.12_linux_amd64.zip
          terraform --version
       
         
