--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -25,6 +25,22 @@ jobs:
          sudo mv terraform /usr/local/bin
          sudo rm terraform_0.12.12_linux_amd64.zip
          terraform --version
+         
+    - name: Clone repository
+      working-directory: /opt
+      env:
+        AWS_ACCESS_KEY_ID: ${{secrets.access_key}}
+        AWS_SECRET_ACCESS_KEY: ${{secrets.secret_key}}
+      run: |
+        git clone https://github.com/PrasadTelasula/LearnDocker.git
+        ls -la /opt/LearnDocker
+        
+    - name: Terraform Initialize
+      working-directory: /opt/LearnDocker/swarm/
+      env:
+        AWS_ACCESS_KEY_ID: ${{secrets.access_key}}
+        AWS_SECRET_ACCESS_KEY: ${{secrets.secret_key}}
+      run: terraform init
       
         
          
