--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -41,6 +41,14 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{secrets.access_key}}
         AWS_SECRET_ACCESS_KEY: ${{secrets.secret_key}}
       run: terraform init
+    
+    - name: Terraform validate
+      working-directory: /opt/LearnDocker/swarm/
+      env:
+        AWS_ACCESS_KEY_ID: ${{secrets.access_key}}
+        AWS_SECRET_ACCESS_KEY: ${{secrets.secret_key}}
+      run: terraform validate
+
       
         
          
