--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,10 @@
 terraform_state*
 terraform_tfstate*
 .terraform*
-*LaunchKey*
+#*LaunchKey*
 tfplan
 *.state
-/swarm/keys/
+#/swarm/keys/
 .terraform/
 terraform-provider-aws_v2.18.0_x4*
 terraform-provider-template_v2.1.2_x4
